@@ -1,5 +1,8 @@
 2003-05-16  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/libcommon/munge_defs.h:
+	  Increased MUNGE_SOCKET_BACKLOG from 10 to 64.
+
 	* src/libcommon/log.c, src/libcommon/log.h:
 	  Added log_errno().  All callers changed.
 
